chore:Search box updation, cancel button to clear search box show only when text is entered in search box, backspacing issue fix

--- a/src/scenes/navbar/styles.css
+++ b/src/scenes/navbar/styles.css
@@ -1,26 +1,29 @@
 .search-box-container {
-  position: absolute;
-  background-color: white;
-  /* width: 30%; */
-  /* border: 1px solid rgb(0, 119, 181); */
-  background-color: rgba(0, 119, 181, 0.5);
-  box-shadow: 0 10px 10px rgb(0, 119, 181, 0.5);
-  border-radius: 2%;
-  z-index: 1;
-  width: 17%;
-  height: auto;
-  overflow-y: scroll;
-  padding-bottom: 0.4%;
+  position: absolute !important;
+  background-color: white !important;
+  background-color: rgba(0, 119, 181, 0.5) !important;
+  box-shadow: 0 10px 10px rgb(0, 119, 181, 0.5) !important;
+  border-radius: 2% !important;
+  z-index: 1 !important;
+  width: 16% !important;
+  height: auto !important;
+  overflow-y: scroll !important;
+  padding-bottom: 0.4% !important;
+  padding-left: 2.5% !important;
 }
 
 .btn-list {
-  margin: 4% 0% 0% -17% !important;
+  margin: 4% 0% 0% -14% !important;
   position: relative !important;
-  width: 15vw;
+  width: 110%;
 }
 
 .img-profile {
-  margin-top: 1vh;
+  position: absolute;
+  left: 3%;
+  top: 0;
+  bottom: 0;
+  margin: auto;
   border-radius: 20px;
   height: 4.5vh;
   width: 2.2vw;
@@ -32,12 +35,24 @@
 }
 
 .clear-search {
-  margin-top: -2.2vh !important;
-  height: 7vh !important;
+  position: absolute !important;
+  border-radius: 50px !important;
+  margin-top: -0.2vh !important;
+  margin-left: -1vh !important;
+  height: 3vh !important;
+  width: 1.5vw !important;
   cursor: pointer;
 }
 
 .clear-search:hover {
   background-color: rgba(0, 119, 181, 0.5);
   color: white;
+}
+
+.lst-items {
+  text-align: right;
+}
+
+.input-name{
+  height: 2.4375em !important;
 }
